test/sc++/error/eoshift-args.scpp
../../scc/error/eoshift-args.sc